--- a/src/boundary/mainFrame.form
+++ b/src/boundary/mainFrame.form
@@ -24,11 +24,11 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="containerMain" max="32767" attributes="0"/>
           <Group type="102" attributes="0">
               <Component id="jToolBar1" min="-2" pref="512" max="-2" attributes="0"/>
               <EmptySpace min="0" pref="8" max="32767" attributes="0"/>
           </Group>
+          <Component id="containerMain" alignment="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
